# algorithms

./: .gitignore  .justfile  Cargo.toml  README.md  test.sh
examples/: plot.rs
src/: lib.rs  matmul.rs  max_subarray.rs  rand.rs  redblack.rs  sort.rs
