[package]
name = "algorithms"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
ndarray = { version = "0.16.1", features = ["rayon"] }
gnuplot = { version = "0.0", optional = true }
num-traits = "0.2.19"

[features]
sort = []
matmul = []
max_subarray = []
default = ["sort", "matmul", "max_subarray", "gnuplot"]

[[bin]]
name = "plot"
required-features = ["gnuplot"]
